<resources>
    <string name="app_name">Fit Journey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_user_name">User Name: </string>
    <string name="login_password">Password: </string>
    <string name="login_first_name">First Name: </string>
    <string name="login_last_name">Last Name: </string>
    <string name="login_age">Age: </string>
    <string name="login_height">Height: </string>
    <string name="login_current_weight">Current Weight (lb): </string>
    <string name="login_goal_weight">Goal Weight (lb): </string>
    <string name="login_gender">Gender:</string>
    <string name="login_male">Male</string>
    <string name="login_female">Female</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_register">REGISTER</string>
    <string name="login_failed">Lgin Failed</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tracker">TrackerActivity</string>
</resources>
